# ia2013-tpi-rl

./: .gitignore  .travis.yml  AUTHORS.txt  LICENSE.txt  README.md  TODO.txt  _config.yml  compile_ui.py  dev-requirements.txt  index.html  index.md  params.json  pyproject.toml  requirements.txt
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
gui/: compile_ui.py
gui/qt/: compile_ui.py
gui/qt/IA-2013-TPI-RL-GUI/: IA-2013-TPI-RL-GUI.pro
gui/qt/IA2013TPIRLGUI/: EN-US  EN-US.qm  IA2013TPIRLGUI.pro  aboutdialog.h  aboutdialog.ui  codetailsdialog.cpp  codetailsdialog.h  codetailsdialog.ui  genrndvalsdialog.cpp  genrndvalsdialog.h  genrndvalsdialog.ui  gwgenrndestadosdialog.cpp  gwgenrndestadosdialog.h  gwgenrndestadosdialog.ui  gwopcionesdialog.cpp  gwopcionesdialog.h  gwopcionesdialog.ui  mainwindow.h  mainwindow.ui  matrizdialog.cpp  matrizdialog.h  matrizdialog.ui  recursos.qrc
pruebas/: pruebas.csv
setup/: setup.py  version_info.py
setup/hooks/: hook-tools.taskbar.py
src/: ia.pyw
src/core/estado/: estado.py
src/core/gridworld/: gridworld.py  gridworldview.py
src/core/qlearning/: compiled_entrenar.pyx  matrixinits.py  qlearning.py  workers.py  (+1 more)
src/graphs/: graficos.py
src/gui/: aboutdialog.py  codetailsdialog.py  genrndvalsdialog.py  gwgenrndestadosdialog.py  gwopcionesdialog.py  mainwindow.py  matrizdialog.py
src/info/: __init__.py  app_info.py
src/tests/: compiled.pyx  entrenar_tests.py  main.py  tests.py
src/tools/: circular.py  enum.py  listacircular.py  livedatafeed.py  logouputhandler.py  matrix.py  queue.py  sumamatriz.pyd
(+36 files in other folders)
